--- a/src/components/FileUploader/DropArea/DropArea.css
+++ b/src/components/FileUploader/DropArea/DropArea.css
@@ -1,3 +1,12 @@
+.drop-area-empty {
+    width: 100%;
+    height: 100%;
+    display:flex;
+    align-items:center;
+    justify-content: center;
+    flex-direction: column;
+}
+
 .drop-area {
     width: 100%;
     height: 70%;
@@ -18,6 +27,10 @@
 }
 
 .drop-area #file {
+    display: none;
+}
+
+.drop-area-empty #file {
     display: none;
 }
 
