--- a/src/components/SpriteArea/Empty/Empty.css
+++ b/src/components/SpriteArea/Empty/Empty.css
@@ -1,4 +1,4 @@
-.empty-list{
+.empty{
     width: 100%;
     height: 100%;
     display: flex;
@@ -6,4 +6,5 @@
     align-items: center;
     border-top: 1px solid;
     color: #999;
+    font-size: 2rem;
 }
