[feature/Sprite 생성 기능 구현] - Canvas 영역에 이미지 채우는 알고리즘 구현(진행중)    - 0,0 좌표와 가까운 영역 선택 기능 수정

--- a/src/components/ContainerInner/ContainerInner.css
+++ b/src/components/ContainerInner/ContainerInner.css
@@ -1,6 +1,7 @@
 .container-inner{
     border: black solid 1px;
     min-height: 600px;
-    height:600px
+    height:600px;
+    margin: 0 190px
 }
 
