--- a/src/components/FileUploader/FileList/FileList.css
+++ b/src/components/FileUploader/FileList/FileList.css
@@ -39,3 +39,14 @@
 .file-list-table-tbody td:nth-last-child(1){
     border-right: 0;
 }
+
+.delete-icon{
+    margin-left: 3px;
+}
+
+.delete-icon > button{
+    background-color: white;
+    border: 0;
+    cursor: pointer;
+}
+
