[feature/ 스타일 리팩토링 ]    - layout width 변경(1440px)    - 드래그앤드롭시 해당 영역이 아니면 plus아이콘 제거    - 테스트 코드 수정    - 깃헙 아이콘 추가

--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -1,10 +1,13 @@
 .container {
     padding:10px;
     min-height: 600px;
-    min-width:1920px
+    min-width:1440px
 }
 
 .container > .container-title{
+    margin:5px 190px;
+    display: flex;
+    justify-content: space-between;
     text-align: center;
     font-size: 2rem;
     font-weight: bold;
