--- a/src/components/Empty/Empty.css
+++ b/src/components/Empty/Empty.css
@@ -4,7 +4,5 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border-top: 1px solid;
-    color: #999;
-    font-size: 2rem;
+    border:none;
 }
