[feature/ 스타일 리팩토링 ]    - 로딩 애니메이션 추가

--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -13,3 +13,9 @@
     font-weight: bold;
 }
 
+.logo {
+    cursor: pointer;
+    height: 40px;
+    margin-right: 20px;
+    text-align: center;
+}
